--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
     </div>
 
      <!-- Modal Trigger -->
-  <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Modal</a>
+  <!-- <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Modal</a> -->
 
   <!-- Modal Structure -->
   <div id="modal1" class="modal">
