--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="vendors/materialize/css/materialize.min.css">
   <!--Import Google Icon Font-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link rel="stylesheet" href="css/main.css">
   <title>Flash Bitacora</title>
 </head>
 
@@ -20,6 +21,8 @@
         </div>
       </div>
     </div>
+
+    <div id="map"></div>
   </header>
   <main>
     <div class="container">
@@ -76,17 +79,17 @@
         <div class="modal-content">
           <h4>Insert your file</h4>
           <input type="file" id="input-file">
-          <input type="text" id="input-text">
+          <!-- <input type="text" id="input-text"> -->
 
-          <div id="form-text-input">
+          <div id="input-text">
           <div class="row">
             <div class="input-field col s12">
               <input value="" id="title-text" type="text" class="validate">
-              <label class="active" for="first_name2">Title</label>
+              <label class="active" for="title-text">Title</label>
             </div>
             <div class="input-field col s12">
               <input value="" id="message_text" type="text" class="validate">
-              <label class="active" for="first_name2">Message</label>
+              <label class="active" for="message_text">Message</label>
             </div>
           </div>
           </div>
@@ -95,7 +98,8 @@
 
 
 
-          <div id="thumbnail"></div>
+          <div id="thumbnail">
+          </div>
         </div>
         <div class="modal-footer" id="modal-footer">
           <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat" id="id-default">Agree</a>
@@ -104,6 +108,10 @@
     </div>
 
   </main>
+  <!-- API google -->
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDlSJFm0Ud-vniNBk71be5AXJ_I5t3w9zU&callback=initMap">
+    </script>
   <script src="vendors/jquery/jquery-3.3.1.min.js"></script>
   <script src="vendors/materialize/js/materialize.min.js"></script>
   <script src="js/app.js"></script>
