--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="vendors/materialize/css/materialize.min.css">
   <!--Import Google Icon Font-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/main.css">
   <title>Flash Bitacora</title>
 </head>
 
@@ -22,7 +22,6 @@
       </div>
     </div>
 
-    <div id="map"></div>
   </header>
   <main>
     <div class="container">
@@ -80,25 +79,20 @@
           <h4>Insert your file</h4>
           <input type="file" id="input-file">
           <!-- <input type="text" id="input-text"> -->
-
           <div id="input-text">
-          <div class="row">
-            <div class="input-field col s12">
-              <input value="" id="title-text" type="text" class="validate">
-              <label class="active" for="title-text">Title</label>
-            </div>
-            <div class="input-field col s12">
-              <input value="" id="message_text" type="text" class="validate">
-              <label class="active" for="message_text">Message</label>
+            <div class="row">
+              <div class="input-field col s12">
+                <input value="" id="title-text" type="text" class="validate">
+                <label class="active" for="title-text">Title</label>
+              </div>
+              <div class="input-field col s12">
+                <input value="" id="message_text" type="text" class="validate">
+                <label class="active" for="message_text">Message</label>
+              </div>
             </div>
           </div>
-          </div>
-
-
-
-
-
           <div id="thumbnail">
+            <div id="map"></div>
           </div>
         </div>
         <div class="modal-footer" id="modal-footer">
@@ -109,11 +103,11 @@
 
   </main>
   <!-- API google -->
-    <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDlSJFm0Ud-vniNBk71be5AXJ_I5t3w9zU&callback=initMap">
-    </script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDlSJFm0Ud-vniNBk71be5AXJ_I5t3w9zU&callback=initMap">
+  </script>
   <script src="vendors/jquery/jquery-3.3.1.min.js"></script>
   <script src="vendors/materialize/js/materialize.min.js"></script>
+  <script src="js/maps.js"></script>
   <script src="js/app.js"></script>
 </body>
 
