--- a/public/index.html
+++ b/public/index.html
@@ -92,7 +92,7 @@
             </div>
           </div>
           <div id="thumbnail">
-            <div id="map"></div>
+            <!-- <div id="map"></div> -->
           </div>
         </div>
         <div class="modal-footer" id="modal-footer">
